Created repost finder

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,35 @@
-appdirs==1.4.3
+aiohttp==1.0.5
+astroid==1.4.9
+async-timeout==1.1.0
+censys==0.0.6
+chardet==2.3.0
+click==6.7
+discord.py==0.16.5
+first==2.0.1
+ibmiotf==0.2.6
 ijson==2.3
-packaging==16.8
-pyparsing==2.2.0
+iso8601==0.1.11
+isort==4.2.5
+lazy-object-proxy==1.2.2
+mccabe==0.5.3
+multidict==2.1.4
+netaddr==0.7.19
+paho-mqtt==1.2
+pbr==2.0.0
+pip-tools==1.9.0
+pycodestyle==2.2.0
+pydocstyle==1.1.1
+pyflakes==1.5.0
+pylama==7.3.3
+pylama-pylint==3.0.1
+pylint==1.6.4
+pytz==2016.10
+requests==2.12.5
 six==1.10.0
+stevedore==1.21.0
+virtualenv==15.1.0
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.2
+websockets==3.2
+wrapt==1.10.8
+yajl==0.3.5
