--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
+appdirs==1.4.3
+cycler==0.10.0
+decorator==4.0.11
 ijson==2.3
-yajl==0.3.5
+matplotlib==2.0.0
 networkx==1.11
+numpy==1.12.1
+packaging==16.8
+pyparsing==2.2.0
+python-dateutil==2.6.0
+pytz==2017.2
+scipy==0.19.0
+six==1.10.0
+yajl==0.3.5
