--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,21 @@ appdirs==1.4.3
 cycler==0.10.0
 decorator==4.0.11
 ijson==2.3
+ipython-genutils==0.2.0
+jsonschema==2.6.0
+jupyter-core==4.3.0
 matplotlib==2.0.0
+nbformat==4.3.0
 networkx==1.11
 numpy==1.12.1
 packaging==16.8
+plotly==2.0.7
+pygraphviz==1.3.1
 pyparsing==2.2.0
 python-dateutil==2.6.0
 pytz==2017.2
+requests==2.13.0
 scipy==0.19.0
 six==1.10.0
+traitlets==4.3.2
 yajl==0.3.5
